--- a/frontend/finalPage.html
+++ b/frontend/finalPage.html
@@ -19,7 +19,7 @@
         <ul id="myList"></ul>
     </div>
     <div>
-        <p>I've also learned that you have feelings😍 for Meghna that to <em>wo wale</em>.</p>
+        <p>I've also learned that you have feelings😍 for Meghna that to <em>wo wali</em>.</p>
         <p>Unfortunately, it's not possible for me to help you pursue a relationship with her.</p>
         <p>Instead I will like to gift you a Swiggy voucher so, that you could at least have a Meghna biryani 😉.</p>
     </div>
